Added KeyCloak API

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,14 @@ security:
       accessTokenUri: http://localhost:8080/auth/realms/demo/protocol/openid-connect/token
       userAuthorizationUri: http://localhost:8080/auth/realms/demo/protocol/openid-connect/auth
     resource:
-       userInfoUri: http://localhost:8080/auth/realms/demo/protocol/openid-connect/userinfo        
+      userInfoUri: http://localhost:8080/auth/realms/demo/protocol/openid-connect/userinfo        
+    #added for Entitlements API
+    entitlements:
+      entitlementsUri: http://localhost:8080/auth/realms/demo/authz/entitlement/openIdDemo      
+    #added for UMA
+    uma:
+      permissionUri: http://localhost:8080/auth/realms/demo/authz/protection/permission
+      authorizeUri: http://localhost:8080/auth/realms/demo/authz/authorize
         
 logging:
   level:
