--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,12 @@
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
         </dependency>
+        
+        <dependency>
+            <groupId>de.muenchen.referenzarchitektur</groupId>
+            <artifactId>authorisationLib</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
                 	
         <dependency>
             <groupId>org.springframework.boot</groupId>
